; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_delete_user_group.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_delete_user_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_groups = type { i32* }

@LEV_TARG_GROUP_DEL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_user_group(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.lev_groups*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32* @get_user(i32 %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

13:                                               ; preds = %2
  %14 = load i64, i64* @LEV_TARG_GROUP_DEL, align 8
  %15 = add nsw i64 %14, 1
  %16 = load i32, i32* %4, align 4
  %17 = call %struct.lev_groups* @alloc_log_event(i64 %15, i32 12, i32 %16)
  store %struct.lev_groups* %17, %struct.lev_groups** %7, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.lev_groups*, %struct.lev_groups** %7, align 8
  %20 = getelementptr inbounds %struct.lev_groups, %struct.lev_groups* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  store i32 %18, i32* %22, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = load %struct.lev_groups*, %struct.lev_groups** %7, align 8
  %25 = getelementptr inbounds %struct.lev_groups, %struct.lev_groups* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @del_groups(i32* %23, i32* %26, i32 1)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %13, %12
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32* @get_user(i32) #1

declare dso_local %struct.lev_groups* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @del_groups(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
